# typical-rust-app-dependencies

./: Cargo.toml
