[package]
name = "typical-rust-app-dependencies"
version = "0.1.0"
authors = ["Chris Allen <cma@bitemyapp.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "4.0.0-beta.6", default-features = false }
anyhow = "1.0.40"
askama = "0.10.5"
chrono = { version = "0.4.19", features = ["serde"] }
datadog-apm-sync = { version = "0.4", git = "http://github.com/kitsuneninetails/datadog-apm-rust-sync", rev = "638286b1616c9e9ca053912fb2e04138b93f993d" }
diesel = { version = "1.4.6", features = ["postgres", "chrono", "r2d2", "64-column-tables", "numeric", "bigdecimal", "serde_json"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }
diesel-derive-newtype = "0.1.2"
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.15"
glob = "0.3.0"
gregorian = "0.2.1"
indoc = "1.0.3"
itertools = "0.10.0"
lazy_static = "1.4.0"
listenfd = "0.3.3"
log = "0.4.14"
paste = { git = "https://github.com/dtolnay/paste.git", rev = "82e3f0346d8d1a42d58aa803e5ef5cd2489467dd" }
rand = "0.8.3"
r2d2 = "0.8.9"
regex = "1.5.4"
rusoto_athena = "0.46.0"
rusoto_core = "0.46.0"
rusoto_glue = "0.46.0"
rusoto_mock = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_stepfunctions = "0.46.0"
sentry = "0.22.0"
sentry-actix = "0.22.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
sha2 = "0.9.5"
shrinkwraprs = "0.3.0"
signal-hook = "0.3.8"
structopt = "0.3.21"
tera = "1.10.0"
thiserror = "1.0.25"
tokio = { version = "1.6.0", features = ["full"] }
toml = "0.5.8"
# For datadog-apm-sync
tracing = "0.1.26"
tracing-futures = "0.2.5"
urlencoding = "1.3.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
yaml-merge-keys = { version = "0.4.1", features = [ "serde_yaml" ] }
yaml-rust = "0.4.5"

[dev-dependencies]
systemfd = "0.3.0"

[[bin]]
name = "typical-rust-app-dependencies"
path = "src/main.rs"
